--- a/index.html
+++ b/index.html
@@ -1,44 +1,16 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en" dir="ltr">
+	<head>
     	<meta charset="utf-8">
     	<title>網頁設計報告-論壇歡迎介面</title>
-	<style>
-		inside_title{
-			font-family: DFKai-sb; 
-			font-size: 48px;
-			color: #20b44a;
-			font-weight: bold; 
-			margin-bottom: 50px;
-		}
-		word1{
-			font-size: 20px;
-		}		
-		word2{
-			font-size: 12px;
-			margin-left: 3px;
-		}
-		input[type="text"] {
-			margin: 5px 0px 5px 0px;  
-			padding: 4px 20px; 
-			background: white; 
-			border:1 none;
-			-webkit-border-radius: 10px;
-			border-radius: 5px; 
-		}
-		input[type="submit"] {
-			cursor:pointer;
-			margin-left: 160px;
-		}
-	</style>
-</head>
+		<link rel="stylesheet" href="style.css">
+	</head>
 <body>
-	<inside_title>歡迎登入介面</inside_title></br>
-	<div style="position:absolute; border-radius: 5px; padding: 10px 15px 10px 15px; border:2px orange solid;">
-	<word1>帳號:</word> <input type="text" placeholder="輸入帳號"><br/>
-	<word1>密碼:</word> <input type="text" placeholder="輸入密碼"><br/>
-	<word2>忘記密碼?</word2><input type="submit" value="登入">
-	</div>
-	
+	<form class="box" action="index.html" method="post">
+		<h1>登入</h1>
+		<input type="text" name="" placeholder="帳號">
+		<input type="password" name="" placeholder="密碼">
+		<input type="submit" name="" value="登入">
+	</form>
 </body>
 </html>
