--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
     	<meta charset="utf-8">
     	<title>網頁設計報告-論壇歡迎介面</title>
-		<link rel="stylesheet" href="webdesgnn/style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 <body>
 	<form class="box" action="index.html" method="post">
