--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
     	<meta charset="utf-8">
     	<title>網頁設計報告-論壇歡迎介面</title>
-		<link rel="stylesheet" href="https://github.com/hicreeper/website/blob/c15eaa4788049025c132ec8325ba77eb97ad54dc/style.css">
+		<link rel="stylesheet" href="./style.css">
 	</head>
 <body>
 	<form class="box" action="index.html" method="post">
