--- a/index.html
+++ b/index.html
@@ -1,16 +1,107 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-	<head>
-    	<meta charset="utf-8">
-    	<title>網頁設計報告-論壇歡迎介面</title>
-		<link rel="stylesheet" href="./style.css">
-	</head>
-<body>
-	<form class="box" action="index.html" method="post">
-		<h1>登入</h1>
-		<input type="text" name="" placeholder="帳號">
-		<input type="password" name="" placeholder="密碼">
-		<input type="submit" name="" value="登入">
-	</form>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
+	<style>
+		*{
+		padding: 0;
+		margin: 0;
+		box-sizing: border-box;
+		}
+		body{
+			margin: 0;
+			padding: 0;
+			background: #4e54a3;
+		}
+		.row{
+			width: 600px;
+			position: absolute;
+			background: #4d4853;
+			border-radius: 30px;
+			text-align: center;
+			transform: translate(40%, 40%);
+		}
+		.btn1{
+			border: none;
+			outline: none;
+			height: 50px;
+			width: 33%;
+			background-color: #4d4853;
+			color: white;
+			border-radius: 24px;
+			font-weight: bold;
+		}
+		.btn1:hover{
+			background-color: #9252ce;
+			border: 1px solid ;
+			color:white;
+		}
+		.form-control{
+			border: 0;
+			background: none;
+			display: block;
+			margin: 20px auto;
+			text-align: center;
+			border: 2px solid #2bf7f0;
+			padding: 14px 10px;
+			width: 200px;
+			outline: none;
+			color: white;
+			border-radius: 24px;
+			transition: 0.25s;
+		}
+		.form-control:focus{
+			width: 280px;
+			border-color: #9252ce;
+		}
+		.font-weight-bold{
+			color: white;
+			text-transform: uppercase;
+			font-weight: 500;
+		}
+	</style>
+  </head>
+  <body>
+    <section class="Form">
+		<div class="container">
+			<div class="row no-gutters">
+				<div class="col-lg  pt-5">
+					<h1 class="font-weight-bold py-3">論壇</h1>
+					<h4>登入你的帳號</h4>
+					<form> 
+						<div class="form-row">
+							<div class="col-lg">
+								<input type="email" placeholder="Email-Address" class="form-control my-3 p-4">
+							</div>
+						</div>
+						<div class="form-row">
+							<div class="col-lg">
+								<input type="password" placeholder="*******" class="form-control my-3 p-4">
+							</div>
+						</div>
+						<div class="form-row">
+							<div class="col-lg">
+								<button type="button" class="btn1 mt-3 mb-5">Login</button>
+							</div>
+						</div>
+						<a href="#">忘記密碼?</a>
+						<p>還沒有擁有帳號? <a href="#">按這裡註冊</a></p>
+					</form>
+				</div>
+			</div>
+		</div>
+		
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 </html>
