--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>論壇-登入</title>
+    <title>論壇-註冊</title>
 	<style>
 		*{
 		padding: 0;
@@ -73,25 +73,28 @@
 		<div class="container">
 			<div class="row no-gutters">
 				<div class="col-lg  pt-5">
-					<h1 class="font-weight-bold py-3">登入你的帳號</h1>
+					<h1 class="font-weight-bold py-3">註冊帳號</h1>
 					<form> 
 						<div class="form-row">
 							<div class="col-lg">
-								<input type="ID" placeholder="你的帳號" class="form-control my-3 p-4">
+								<input type="ID" placeholder="帳號" class="form-control my-3 p-4">
 							</div>
 						</div>
 						<div class="form-row">
 							<div class="col-lg">
-								<input type="password" placeholder="你的密碼" class="form-control my-3 p-4">
+								<input type="password" placeholder="密碼" class="form-control my-3 p-4">
 							</div>
 						</div>
 						<div class="form-row">
 							<div class="col-lg">
-								<button type="button" class="btn1 mt-3 mb-5">Login</button>
+								<input type="password" placeholder="再次輸入密碼" class="form-control my-3 p-4">
 							</div>
 						</div>
-						<a href="#">忘記密碼?</a>
-						<p>還沒有擁有帳號? <a href="./register.html">按這裡註冊</a></p>
+						<div class="form-row">
+							<div class="col-lg">
+								<button type="button" class="btn1 mt-3 mb-5">註冊</button>
+							</div>
+						</div>
 					</form>
 				</div>
 			</div>
