--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							</div>
 						</div>
 						<a href="#">忘記密碼?</a>
-						<p>還沒有擁有帳號? <a href="./register.html">按這裡註冊</a></p>
+						<p>還沒有擁有帳號? <a href="https://raw.githubusercontent.com/hicreeper/website/main/register.html">按這裡註冊</a></p>
 					</form>
 				</div>
 			</div>
